--- a/pkg/marshmallow-x86-init/Dockerfile
+++ b/pkg/marshmallow-x86-init/Dockerfile
@@ -1,6 +1,8 @@
 FROM alpine:3.6
 
+WORKDIR /root
 
 COPY initrd /root/initrd
 COPY ramdisk /root/ramdisk
 COPY mk-initrd.sh /root/mk-initrd.sh
+COPY init /root/init
