--- a/pkg/marshmallow-x86-init/Makefile
+++ b/pkg/marshmallow-x86-init/Makefile
@@ -4,3 +4,18 @@ IMAGE=zjsyhjh/marshmallow-x86-initrd-build-env
 NAME=initrd-build-container
 
 
+default: run
+
+
+build: Dockerfile
+	docker build -f Dockerfile -t $(IMAGE) .
+
+run: build
+	docker run -it --name $(NAME) -v ~/images:/images $(IMAGE)
+
+
+clean:
+	docker stop $(NAME)
+	docker rm $(NAME)
+
+
