--- a/pkg/marshmallow-x86-init/Dockerfile
+++ b/pkg/marshmallow-x86-init/Dockerfile
@@ -1,5 +1,11 @@
 FROM alpine:3.6
 
+RUN \
+    apk update && apk upgrade && \
+    apk add --no-cache \
+    cpio \
+    && true
+
 WORKDIR /root
 
 COPY initrd /root/initrd
