--- a/pkg/marshmallow-x86-init/Dockerfile.initrd-image
+++ b/pkg/marshmallow-x86-init/Dockerfile.initrd-image
@@ -11,13 +11,28 @@ COPY ramdisk /root/ramdisk
 COPY init /root/init
 
 
-RUN 
+# unpack initrd.img
+RUN ( mkdir /old-initrd && cd /old-initrd && \
+        ( zcat /root/initrd/initrd.img | cpio -iud))
+
+# pack ramdisk.img
+RUN ( cd /root/ramdisk && ( find . | cpio --quiet -H newc -o | gzip -9 -n > /old-initrd/ramdisk.img))
+
+
+# update init
+RUN ( cp -f /root/init /old-initrd/init)
+
+
+# get new-initrd.img
+RUN ( mkdir /out && cd /out && \
+        ( find . | cpio --quiet -H newc -o | gzip -9 -n > /out/initrd.img))
+
 
 
 FROM scratch
 ENTRYPOINT []
 CMD []
 WORKDIR /
-COPY --from=initrd-image-build /
+COPY --from=initrd-image-build /out/* /
 
 
