--- a/pkg/marshmallow-x86-init/Dockerfile.initrd-image
+++ b/pkg/marshmallow-x86-init/Dockerfile.initrd-image
@@ -6,26 +6,32 @@ RUN \
     cpio \
     && true
 
+WORKDIR /root
+
 COPY initrd /root/initrd
 COPY ramdisk /root/ramdisk
 COPY init /root/init
+COPY mk-initrd.sh /root/mk-initrd.sh
 
+RUN chmod +x /root/init
+RUN chmod +x /root/mk-initrd.sh
+RUN /root/mk-initrd.sh
 
 # unpack initrd.img
-RUN ( (mkdir /old-initrd) && (cd /old-initrd) && \
-        ( zcat /root/initrd/initrd.img | cpio -iud))
+#RUN ( (mkdir /old-initrd && cd /old-initrd) && \
+#        ( zcat /root/initrd/initrd.img | cpio -iud))
 
 # pack ramdisk.img
-RUN ( (cd /root/ramdisk) && ( find . | cpio --quiet -H newc -o | gzip -9 -n > /old-initrd/ramdisk.img))
+#RUN ( (cd /root/ramdisk) && ( find . | cpio --quiet -H newc -o | gzip -9 -n > /old-initrd/ramdisk.img))
 
 
 # update init
-RUN ( cp -f /root/init /old-initrd/init)
+#RUN ( cp -f /root/init /old-initrd/init)
 
 
 # get new-initrd.img
-RUN ( (mkdir /out) && (cd /old-initrd) && \
-        ( find . | cpio --quiet -H newc -o | gzip -9 -n > /out/initrd.img))
+#RUN ( (mkdir /out) && (cd /old-initrd) && \
+#        ( find . | cpio --quiet -H newc -o | gzip -9 -n > /out/initrd.img))
 
 
 
@@ -33,6 +39,6 @@ FROM scratch
 ENTRYPOINT []
 CMD []
 WORKDIR /
-COPY --from=initrd-image-build /out/* /
+COPY --from=initrd-image-build /new-initrd/initrd.img /
 
 
